[gd_scene load_steps=14 format=3 uid="uid://dn01cswoatx6h"]

[ext_resource type="Script" path="res://main_scene.gd" id="1_m3vk5"]
[ext_resource type="PackedScene" uid="uid://b2ynmtk8hq4th" path="res://bag.tscn" id="3_lp0of"]
[ext_resource type="Texture2D" uid="uid://cr6lcn6vch83q" path="res://imgs/background.svg" id="4_8qneu"]
[ext_resource type="Texture2D" uid="uid://clamfdwmpbgx5" path="res://imgs/heart_256x256.svg" id="5_a103p"]
[ext_resource type="Texture2D" uid="uid://bc73aduvjlweh" path="res://imgs/multiplier_256x256.svg" id="5_mwht0"]
[ext_resource type="AudioStream" uid="uid://c8pdust8afg8c" path="res://sounds/hurt.wav" id="6_017sr"]
[ext_resource type="AudioStream" uid="uid://bumsv73q1pw7f" path="res://sounds/pickup.wav" id="7_rw2kv"]
[ext_resource type="AudioStream" uid="uid://idshh13pco8c" path="res://sounds/powerup.wav" id="8_uqcgm"]

[sub_resource type="LabelSettings" id="LabelSettings_tlvjj"]
font_size = 20
font_color = Color(0, 0.00784314, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rrjx4"]
font_size = 64
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_nl82f"]
font_size = 64
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_u7a1d"]
font_size = 120
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6hnpl"]
font_size = 48
font_color = Color(0, 0, 0, 1)

[node name="main_scene" type="Node2D"]
process_mode = 3
script = ExtResource("1_m3vk5")

[node name="background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_8qneu")

[node name="Bag" parent="." instance=ExtResource("3_lp0of")]
process_mode = 1
position = Vector2(697, 725)

[node name="objects" type="Node2D" parent="."]
process_mode = 1

[node name="score" type="Label" parent="."]
offset_left = 1664.0
offset_top = 32.0
offset_right = 1856.0
offset_bottom = 96.0
label_settings = SubResource("LabelSettings_tlvjj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="heart" type="TextureRect" parent="."]
offset_left = 1728.0
offset_top = 96.0
offset_right = 1984.0
offset_bottom = 352.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_a103p")

[node name="heart_count" type="Label" parent="heart"]
offset_right = 256.0
offset_bottom = 256.0
label_settings = SubResource("LabelSettings_rrjx4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="multiplier" type="TextureRect" parent="."]
offset_left = 1792.0
offset_top = 96.0
offset_right = 1856.0
offset_bottom = 160.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_mwht0")

[node name="multiplier" type="Label" parent="multiplier"]
offset_right = 256.0
offset_bottom = 256.0
label_settings = SubResource("LabelSettings_nl82f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseMenu" type="Panel" parent="."]
process_mode = 3
visible = false
offset_right = 1920.0
offset_bottom = 1080.0

[node name="quit" type="Button" parent="PauseMenu"]
offset_left = 832.0
offset_top = 512.0
offset_right = 1088.0
offset_bottom = 576.0
text = "Quit"

[node name="resume" type="Button" parent="PauseMenu"]
offset_left = 832.0
offset_top = 384.0
offset_right = 1088.0
offset_bottom = 448.0
text = "Resume"

[node name="GameOver" type="Panel" parent="."]
process_mode = 3
visible = false
offset_right = 1920.0
offset_bottom = 1080.0

[node name="text" type="Label" parent="GameOver"]
offset_left = 320.0
offset_top = 248.0
offset_right = 1600.0
offset_bottom = 448.0
text = "Game Over"
label_settings = SubResource("LabelSettings_u7a1d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="final_score" type="Label" parent="GameOver"]
offset_left = 640.0
offset_top = 448.0
offset_right = 1280.0
offset_bottom = 518.0
text = "Final Score"
label_settings = SubResource("LabelSettings_6hnpl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="quit" type="Button" parent="GameOver"]
offset_left = 1024.0
offset_top = 576.0
offset_right = 1280.0
offset_bottom = 640.0
text = "Quit"

[node name="play_again" type="Button" parent="GameOver"]
offset_left = 640.0
offset_top = 576.0
offset_right = 896.0
offset_bottom = 640.0
text = "Play Again"

[node name="sounds" type="Node2D" parent="."]

[node name="hurt" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource("6_017sr")

[node name="pickup" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource("7_rw2kv")

[node name="powerup" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource("8_uqcgm")

[connection signal="area_entered" from="Bag" to="." method="_on_bag_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="PauseMenu/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="PauseMenu/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="GameOver/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="GameOver/play_again" to="." method="_on_play_again_pressed"]
